<resources>
    <string name="app_name">Storm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="lbl_agent">Agent</string>
    <string name="lbl_merchant">Merchant</string>
    <string name="lbl_forgot_pwd">Forgot password?</string>
    <string name="lbl_no_account">Don\'t have an account?</string>
    <string name="lbl_have_an_account">Already have an account?</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_pay">Pay</string>
    <string name="lbl_upload">Upload Product Image</string>
    <string name="lbl_submit">SUBMIT</string>
    <string name="lbl_retake">RETAKE</string>
    <string name="lbl_done">DONE</string>
    <string name="lbl_back">Back</string>
    <string name="lbl_sign_in">Sign in</string>
    <string name="lbl_store_manager">STORE\nMANAGER</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="lbl_quick_transaction">Quick Transaction</string>
    <string name="lbl_add_inventory">Add Inventory</string>
    <string name="lbl_view_inventory">View Inventory</string>
    <string name="lbl_view_transactions">View Transactions</string>
    <string name="lbl_fund_fallet">Fund Wallet</string>
    <string name="lbl_cash_in">Cash In</string>
    <string name="lbl_cash_out">Cash-Out</string>
    <string name="lbl_convinience_fee">Convenience Fee</string>
    <string name="lbl_signature">SIGNATURE</string>
    <string name="lbl_signature_required">SIGNATURE IS REQUIRED</string>
    <string name="title_please_sign">Please sign using finger or stylus to create signature</string>
    <string name="lbl_western_union">Western Union</string>
    <string name="lbl_ria">Ria</string>
    <string name="lbl_moneygram">Moneygram</string>
    <string name="lbl_ssnit">SSNIT</string>
    <string name="lbl_fines">FINES AND BAILS</string>
    <string name="lbl_school_fees">SCHOOL FEES</string>
    <string name="hint_name">BUSINESS NAME</string>
    <string name="hint_customer_name">CUSTOMER NAME</string>
    <string name="hint_product_name">PRODUCT NAME</string>
    <string name="hint_search_product">SEARCH BY PRODUCT NAME</string>
    <string name="hint_brief_note">BRIEF NOTE</string>
    <string name="hint_description">DESCRIPTION</string>
    <string name="hint_enter_email">ENTER EMAIL</string>
    <string name="hint_enter_password">ENTER PASSWORD</string>
    <string name="hint_create_password">CREATE A PASSWORD</string>
    <string name="hint_re_enter_password">RE ENTER PASSWORD</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_caps">EMAIL</string>
    <string name="hint_phone_caps">MOBILE NUMBER</string>
    <string name="hint_phone_no_caps">MOBILE NUMBER</string>
    <string name="hint_account_no">ACCOUNT NUMBER</string>
    <string name="hint_id_no">ID NUMBER</string>
    <string name="hint_cvv">ENTER CVV</string>
    <string name="hint_momo_name">ENTER ACCOUNT NAME</string>
    <string name="hint_momo_number">ENTER ACCOUNT NUMBER</string>
    <string name="hint_bvn_no">BVN</string>
    <string name="hint_password">Password</string>
    <string name="hint_select_state">SELECT STATE</string>
    <string name="hint_select_color">COLOR</string>
    <string name="hint_choose_gender">CHOOSE GENDER</string>
    <string name="hint_choose_marital_status">CHOOSE MARITAL STATUS</string>
    <string name="hint_choose_bank_caps">SELECT BANK</string>
    <string name="hint_choose_reference">SELECT REFERENCE TYPE</string>
    <string name="hint_choose_transaction_purpose">PURPOSE OF TRANSACTION</string>
    <string name="hint_select_bank_caps">SELECT BANK</string>
    <string name="hint_choose_quantity">CHOOSE QUANTITY</string>
    <string name="hint_select_category">SELECT CATEGORY</string>
    <string name="hint_product_price">GH₵ 0.00</string>
    <string name="hint_amount">AMOUNT</string>
    <string name="hint_depositor">DEPOSITOR</string>
    <string name="hint_choose_id_type">SELECT ID</string>
    <string name="hint_choose_network">SELECT NETWORK TYPE</string>
    <string name="hint_choose_trans_type">SELECT MODE OF PAYMENT</string>
    <string name="hint_choose_ref_type">SELECT REFERENCE</string>
    <string name="hint_choose_purpose_trans">PURPOSE OF TRANSACTION</string>
    <string name="hint_choose_school">SELECT SCHOOL</string>
    <string name="hint_choose_claim">Please select claim option</string>
    <string name="hint_choose_cause_of_death">Please select cause of death</string>
    <string name="lbl_service_providers">DSTV,GOTV,TRend,MyTV &amp; Many More</string>
    <string name="lbl_phone_no_verification">Mobile Number Verification</string>
    <string name="lbl_verification">Verify</string>
    <string name="lbl_email_verification">Email Verification</string>
    <string name="lbl_verification_code_sent">A verification code has been sent to your registered E-mail address</string>
    <string name="lbl_verification_code_not_received">Didn\'t receive the OTP yet?</string>
    <string name="lbl_resend">Resend OTP</string>
    <string name="lbl_currency_naira">GH₵</string>
    <string name="lbl_fund_wallet"><u>Fund Your Wallet</u></string>
    <string name="lbl_no_thanks">No thanks, I don\'t need receipt for this transaction</string>
    <string name="title_alert">Alert</string>
    <string name="disclaimer">Note that submitting false information is considered fraudulent and punishable by law.</string>
    <string name="thank_you">Thank you for submitting the first part of your claim. We will send you an sms to keep you updated on the status of your claim.</string>
    <string name="cover_option_month1">You have selected a cover option of GH₵2,000 and have chosen a monthly premium frequency payment of GH₵4.00</string>
    <string name="cover_option_month2">You have selected a cover option of GH₵10,000 and have chosen a monthly premium frequency payment of GH₵14.00</string>
    <string name="cover_option_month3">You have selected a cover option of GH₵20,000 and have chosen a monthly premium frequency payment of GH₵25.00</string>
    <string name="cover_option_annual1">You have selected a cover option of GH₵2,000 and have chosen an annual premium frequency payment of GH₵48.00</string>
    <string name="cover_option_annual2">You have selected a cover option of GH₵10,000 and have chosen an annual premium frequency payment of GH₵168.00</string>
    <string name="cover_option_annual3">You have selected a cover option of GH₵20,000 and have chosen an annual premium frequency payment of GH₵300.00</string>
    <string name="select_bluetooth_device">Select bluetooth device</string>
    <string name="terminal_selection_hint">Please select an OUTPOS device based on its serial number and ensure that it is turned on.</string>
    <string name="cancel">Cancel</string>
    <string name="receipt">Print receipt</string>
    <string name="loading_receipt">Loading receipt...</string>
    <string name="session_expired">Session expired</string>
    <string name="bt_permission_denied">Bluetooth Permission denied</string>
    <string name="select_receipt_format">Select receipt format</string>
    <string name="sending_success">Success</string>
    <string name="logout_confirm_message">Are you sure you want to logout from the application ?</string>
    <string name="yes">Yes</string>
    <string name="app_version">v0.15.1</string>
    <string name="_app_name">storm_app</string>
    <string name="_password">C0R3MELTDOWN!</string>
    <string name="enter_mobile_number">ENTER MOBILE NUMBER</string>
    <string name="confirm_mobile_number">CONFIRM MOBILE NUMBER</string>
    <string name="enter_smart_card_number">ENTER SMART CARD NUMBER</string>
    <string name="enter_meter_number">ENTER METER NUMBER</string>
    <string name="enter_email_address">ENTER EMAIL ADDRESS</string>
    <string name="daily">Daily</string>
    <string name="weekely">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="service_asset">Service Asset</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="pay_bill_for">Pay bill for:</string>
    <string name="summary">Summary</string>
    <string name="provider">Provider: </string>
    <string name="bill_package">Package: </string>
    <string name="account_id">Account ID: </string>
    <string name="account_name">Account Name: </string>
    <string name="proceed">Proceed</string>
    <string name="store_nmanager">Store\nManager</string>
    <string name="qr_registration">Qr Registration</string>
    <string name="business_name">BUSINESS NAME</string>
    <string name="business_address">BUSINESS ADDRESS</string>
    <string name="hint_address">BUSINESS ADDRESS</string>
    <string name="already_have_an_account_styled">ALREADY HAVE AN ACCOUNT? <b style="color: blue">SIGN IN</b>!</string>
    <string name="lbl_merchant_id">MERCHANT ID</string>
    <string name="view_and_activate">view and activate your account</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="card_payment">Card Payment</string>
    <string name="account_transfer">Account Transfer</string>
    <string name="qr_payment">QR Payment</string>
    <string name="choose_a_payment_type_below">Choose a Payment type below</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="select_how_you_want_to_receive_your_receipt">Select how you want to receive your receipt</string>
    <string name="SEND">send</string>
    <string name="no_thanks_i_don_t_need_a_receipt_for_this_transaction">No thanks, I don\'t need a receipt for this transaction</string>
    <string name="scan_here_to_pay">Scan Here To Pay</string>
    <string name="health_checker">health checker</string>
    <string name="health_checker_please_fill_form">Please fill the form below and a Consultant will reach out to the customer</string>
    <string name="type_of_case">Type of case</string>
    <string name="select_if_new_or_follow_up">Please select if this is a new or a follow-up case, if it is a follow up, please put in the customer\'s follow-up code</string>
    <string name="new_case">New Case</string>
    <string name="follow_up_case">Follow-Up Case</string>
    <string name="follow_up_code">Follow-Up Code</string>
    <string name="customer_s_details">Customer\'s Details</string>
    <string name="please_fill_select_the_correct_customer_detail_below">Please fill/select the correct customer detail below</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="preferred_means_of_communication">Preferred means of communication</string>
    <string name="please_select_customer_s_preferred_way_to_communicate_with_consultant">Please select customer\'s preferred way to communicate with consultant</string>
    <string name="via_sms">Via SMS</string>
    <string name="via_phone_call">Via Phone Call</string>
    <string name="pay_submit">Pay &#38; Submit</string>
</resources>